--- a/cargo-generate.toml
+++ b/cargo-generate.toml
@@ -1,5 +1,10 @@
+# Docs: https://cargo-generate.github.io/cargo-generate/index.html
+
 [template]
 cargo_generate_version = ">=0.21.0"
+ignore = [
+    ".github/workflows/generate.yml"
+]
 
 [hooks]
 pre = ["pre.rhai"]
