--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: cargo-generate/cargo-generate-action@latest
         with:
           name: ${{ env.PROJECT_NAME }}
+          arguments: "--define project_type=\"Binary\""
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
