remove for now ci folders

--- a/cargo-generate.toml
+++ b/cargo-generate.toml
@@ -2,9 +2,7 @@
 
 [template]
 cargo_generate_version = ">=0.20.0"
-ignore = [
-    ".github/workflows/generate.yml"
-]
+ignore = [".github", ".github/workflows/generate.yml"]
 
 [hooks]
 pre = ["pre.rhai"]
